Fix comment spacing

--- a/client/stylesheets/components.import.less
+++ b/client/stylesheets/components.import.less
@@ -383,7 +383,7 @@
   color: @fontColor-muted;
 }
 .topic-header {
-  padding: 15px 30px 5px;
+  padding: 15px 30px 7.5px;
 }
 // .topic-category-title {
 //   float: left;
